fix trainer
