# models/memberModel.go
@@ -18,20 +18,22 @@ type Member struct {
 	Gender    string    `gorm:"type:enum('male','female')" json:"gender"`
 	Weight    uint16    `gorm:"default:0" json:"weight"`
 	Package   string    `gorm:"size:50" json:"package"`
+	Status    string    `gorm:"size:50" json:"status"`
 	TrainerID uint      `json:"trainer_id"`
 	Trainer   Trainer   `gorm:"foreignKey:TrainerID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL" json:"trainer"`
 }
 
 type MemberBody struct {
-	Name      string    `json:"name"`
-	NIK       uint      `json:"nik"`
-	Birthday  time.Time `json:"birthday"`
-	Email     string    `json:"email"`
-	Contact   string    `json:"contact"`
-	Instagram string    `json:"instagram"`
-	Address   string    `json:"address"`
-	Gender    string    `json:"gender"`
-	Weight    uint16    `json:"weight"`
-	Package   string    `json:"package"`
-	TrainerID uint      `json:"trainer_id"`
+	Name      string `json:"name"`
+	NIK       uint   `json:"nik"`
+	Birthday  string `json:"birthday"`
+	Email     string `json:"email"`
+	Contact   string `json:"contact"`
+	Instagram string `json:"instagram"`
+	Address   string `json:"address"`
+	Gender    string `json:"gender"`
+	Weight    uint16 `json:"weight"`
+	Package   string `json:"package"`
+	Status    string `json:"status"`
+	TrainerID uint   `json:"trainer_id"`
 }
